--- a/index.html
+++ b/index.html
@@ -22,30 +22,10 @@
             </div>
             <br />
 
-
-            <!-- <form>
-            <label for="length">Password Length</label>
-            <input type="range" min="1" max="128" value="8" id="length">
-            <input type="number" min="1" max="128" value="8" id="length">
-
-            <label for="lowercase">Include lowercase letters</label>
-            <input type="checkbox" id="lowercase">
-
-            <label for="uppercase">Include uppercase letters</label>
-            <input type="checkbox" id="uppercase">
-
-            <label for="number">Include numbers</label>
-            <input type="checkbox" id="number">
-
-            <label for="symbol">Include symbols</label>
-            <input type="checkbox" id="symbol">
-        </form> -->
-
-
             <form>
-                <div class="form-check form-check-inline">
+                <div class="form-check-inline">
                     <label class="form-check-label" for="length">Password Length</label>
-                    <input class="form-check-input" type="number" id="length">
+                    <input class="form-check-input" type="number" id="length" min="8" max="128" style="margin:10px;">
                 </div>
                 <br />
                 <div class="form-check form-check-inline">
